--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Flow_project"
         tools:targetApi="31">
         <activity
+            android:name=".game_score.GameScoreActivity"
+            android:exported="false" />
+        <activity
             android:name=".crypto_app.CryptoActivity"
             android:exported="false" />
         <activity
